still refactoring (CentiVisList)