@@ -5,6 +5,7 @@ import net.minecraft.world.entity.Entity;
 import net.minecraft.world.item.ItemStack;
 import net.minecraft.world.level.Level;
 import thaumcraft.api.aspects.Aspect;
+import thaumcraft.api.aspects.CentiVisList;
 import thaumcraft.api.wands.InventoryTickableComponent;
 import thaumcraft.api.wands.ICentiVisContainer;
 
@@ -16,18 +17,19 @@ import java.util.stream.Collectors;
 import static thaumcraft.api.wands.ICentiVisContainer.CENTIVIS_MULTIPLIER;
 
 public abstract class ThaumcraftAspectRegenWandRodItem extends ThaumcraftWandRodItem implements InventoryTickableComponent {
-    public ThaumcraftAspectRegenWandRodItem(Properties properties, Map<Aspect,Integer> canRegenCentiVisAndValue) {
+    public ThaumcraftAspectRegenWandRodItem(Properties properties, CentiVisList<Aspect> canRegenCentiVisAndValue) {
         super(properties);
         this.canRegenCentiVisAndValue = canRegenCentiVisAndValue;
-        this.canRegenCentiVisAndValueAsList = canRegenCentiVisAndValue.entrySet().stream().map(e -> new SimplePair(e.getKey(), e.getValue())).collect(Collectors.toList());
+        this.canRegenCentiVisAndValueAsList = canRegenCentiVisAndValue.entrySet().stream().map(e -> new SimplePair<>(e.getKey(), e.getValue())).toList();
     }
-    protected final Map<Aspect, Integer> canRegenCentiVisAndValue;
+    protected final CentiVisList<Aspect> canRegenCentiVisAndValue;
     protected final List<SimplePair<Aspect, Integer>> canRegenCentiVisAndValueAsList;
 
     @Override
     public void tickAsComponent(ItemStack usingWand, Level level, Entity entity, int i, boolean bl) {
         var wandStackItem = usingWand.getItem();
-        if (wandStackItem instanceof ICentiVisContainer container) {
+        if (wandStackItem instanceof ICentiVisContainer<?> containerNotCasted && containerNotCasted.tryCastAspectClass(Aspect.class)) {
+            var container = (ICentiVisContainer<Aspect>) containerNotCasted;
             if (entity.tickCount % 200 == 0){
                 var owningVis = container.getAllCentiVisOwning(usingWand);
                 for (Map.Entry<Aspect,Integer> entry: canRegenCentiVisAndValue.entrySet()) {
